# slackup

./: Cargo.toml  README.md  jq_stats.sh
src/: client.rs  main.rs
