[package]
name = "slackup"
version = "0.1.0"
authors = ["James Wilson <james@jsdw.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
reqwest = { version = "0.10.4", features = ["json"] }
structopt = "0.3.14"
anyhow = "1.0.28"
serde = { version = "1.0.107", features = ["derive"] }
serde_json = "1.0.52"
url = "2.1.1"
